# genseo-workshop

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  start_app.sh
agent/: README.md  main.py  pyproject.toml  requirements.txt
agent/samples/: briefing.md  final_report.json
agent/src/: README.md  agent.py  main.py
agent/src/fetcher_agent/: agent.py
agent/src/seo_agent/: agent.py  models.py
agent/src/seo_agent/subagents/: briefing_evaluator.py  briefing_generator.py  content_parser.py  researcher.py  semantic_analyzer.py
agent/src/seo_agent/tools/: analysis_tools.py  content_tools.py  research_tools.py
agent/src/tools/: content_briefing.py  evaluation.py  semantic_analysis.py  serp_api.py
backend/: README.md  main.py  pyproject.toml  requirements.txt
frontend/: README.md  package-lock.json  package.json
frontend/app/: globals.css  page.tsx
samples/: briefing_adk.md  evaluation_adk.md  final_report_adk.json
src/: agent.py  config.py
src/tools/: content_briefing.py  custom_search.py  evaluation.py  generate_tokens.py  google_ads.py  jina_reader.py
